--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
 :root {
   --black: #111;
   --white: #fff;
-  --grey: #383838;
-  --sky: #92d3d5;
+  --sky: skyblue;
   --grass: #99ce86;
+
+  --pink-one: #f897ab;
+  --pink-two: #f97d88;
+  --pink-three: #d87478;
+  --pink-four: #ce6d7a;
+
+  --blue-one: #c3e1ec;
+  --blue-two: #95d3cd;
+  --blue-three: #8db7b8;
+  --blue-four: #769995;
+  --blue-five: #536866;
 }
 
 body {
@@ -28,4 +38,204 @@ body {
   width: 100%;
   height: calc(50vh - 100px);
   background-color: var(--grass);
+}
+
+.the-fake {
+  display: block;
+  width: 630px;
+  height: 565px;
+  position: absolute;
+  transform: rotate(-4deg);
+  margin: auto;
+  opacity: 0.4;
+  background-image: url(porygon.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.porygon-wrapper {
+  display: block;
+  width: 660px;
+  height: 520px;
+  position: relative;
+  /* cursor: pointer; */
+}
+
+.head-wrapper {
+  position: absolute;
+  top: 35px;
+  right: 272px;
+  transform: rotate(-8deg);
+  will-change: transform;
+}
+
+.mid-head {
+  position: absolute;
+  top: -5px;
+  left: -204px;
+  transform: rotate(-34deg) skew(30deg);
+  width: 235px;
+  height: 54px;
+  background-color: var(--pink-one);
+}
+
+.mid-head:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 90px;
+  height: 100%;
+  background-color: var(--blue-one);
+}
+
+.back-head-line {
+  position: absolute;
+  top: -23px;
+  right: -27px;
+  width: 147px;
+  height: 4px;
+  transform: rotate(26deg);
+  background-color: var(--pink-two);
+}
+
+.back-head-bottom {
+  position: absolute;
+  top: 77px;
+  right: -18px;
+  width: 61px;
+  height: 83px;
+  transform: rotate(-73deg) skew(39deg);
+  background-color: var(--pink-four);
+
+}
+
+.back-head-bottom:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  top: -10px;
+  right: -34px;
+  height: 100%;
+  transform: rotate(40deg);
+  background-color: var(--pink-four);
+}
+
+
+.back-head-top {
+  height: 100%;
+  position: absolute;
+  top: -51px;
+  left: 61px;
+  border-top: 45px inset transparent;
+  border-bottom: 42px inset transparent;
+  border-right: 53px solid var(--pink-two);
+  transform: rotate(-250deg);
+}
+
+.side-head {
+  position: absolute;
+  top: 16px;
+  left: -175px;
+  transform: rotate(-25deg);
+  width: 0;
+  height: 0;
+  border-top: 40px inset transparent;
+  border-bottom: 40px inset transparent;
+  border-right: 230px solid var(--pink-two);
+}
+
+.side-head:after {
+  content: '';
+  position: absolute;
+  top: -20px;
+  left: -2px;
+  border-top: 19px inset transparent;
+  border-bottom: 19px inset transparent;
+  border-right: 100px solid var(--blue-two);
+}
+
+.bottom-head {
+  position: absolute;
+  height: 18%;
+  top: 32px;
+  left: -159px;
+  border-top: 72px inset transparent;
+  border-bottom: 54px inset transparent;
+  border-right: 217px solid var(--pink-three);
+  transform: rotate(0deg) skew(-23deg);
+}
+
+.bottom-head:after {
+  content: '';
+  height: 100%;
+  position: absolute;
+  top: -84px;
+  left: 4px;
+  border-top: 86px inset transparent;
+  border-bottom: 20px inset transparent;
+  border-right: 78px solid var(--blue-three);
+}
+
+.nose {
+  width: 65px;
+  height: 20px;
+  position: absolute;
+  top: 87px;
+  left: -213px;
+  transform: rotate(23deg) skew(26deg);
+  background-color: var(--blue-four);
+}
+
+.eye {
+  position: relative;
+  width: 100px;
+  height: 57.74px;
+  background-color: var(--white);
+  transform: skew(12deg);
+  box-sizing: border-box;
+}
+
+.eye-left {
+  position: absolute;
+  top: -29px;
+  left: -58px;
+}
+
+.eye-ball {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  position: absolute;
+  top: 25px;
+  left: 30px;
+  z-index: 5;
+  background-color: var(--black);
+}
+
+.eye:before,
+.eye:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  border-left: 50px inset transparent;
+  border-right: 50px inset transparent;
+}
+
+.eye:before {
+  bottom: 100%;
+  border-bottom: 28.87px solid var(--white);
+}
+
+.eye:after {
+  top: 100%;
+  width: 0;
+  border-top: 28.87px solid var(--white);
+}
+
+
+
+
+.tail {
+
 }
