Added water, fixed responsive issues

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,9 @@
   --mountain-right: #5db231;
 
   --shrub: #2f9228;
-  --trunk: #363a30;
+  --trunk-shade: #242921;
+  --trunk: #37392b;
+  --water: #9097cc;
 
   --pink-one: #f897ab;
   --pink-two: #f97d88;
@@ -104,9 +106,9 @@ body {
 
 .tree-four {
   position: absolute;
-  bottom: 34vh;
+  bottom: 50vh;
   left: 0;
-  transform: scale(3);
+  transform: scale(2);
   transform-origin: 50% 100%;
 }
 
@@ -145,7 +147,27 @@ body {
   border-right-width: 40px;
 }
 
+.water {
+  position: absolute;
+  top: 105px;
+  left: -215px;
+  width: 380px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: var(--water);
+}
 
+.water:after {
+  content: '';
+  position: absolute;
+  bottom: -38px;
+  right: 137px;
+  width: 97px;
+  height: 52px;
+  border-radius: 50% 0;
+  transform: skew(-56deg);
+  background-color: var(--water);
+}
 
 .porygon-wrapper {
   display: block;
@@ -235,7 +257,6 @@ body {
   transform: rotate(40deg);
   background-color: var(--pink-four);
 }
-
 
 .back-head-top {
   height: 100%;
@@ -560,5 +581,13 @@ body {
   .porygon-wrapper {
     transform: scale(0.4) translateY(150px);
     transform-origin: 300px;
+  }
+
+  .tail-wrapper {
+    transform-origin: 286px 311px;
+  }
+
+  .right-leg {
+    transform-origin: 94px 249px;
   }
 }
