--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,9 @@
   --mountain-right: #5db231;
 
   --shrub: #2f9228;
-  --trunk-shade: #242921;
-  --trunk: #37392b;
+  --shrub-shade: #285f24;
+  --trunk: #61483e;
+  --trunk-shade: #503b33;
   --water: #9097cc;
 
   --pink-one: #f897ab;
@@ -42,12 +43,12 @@ body {
 
 .ground {
   display: block;
+  width: 100%;
+  height: calc(65vh + 1px);
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   right: 0;
-  width: 100%;
-  height: 65vh;
   background: linear-gradient(to bottom, var(--grass-top) 0%, var(--grass)100%);
 }
 
@@ -92,6 +93,7 @@ body {
   position: absolute;
   bottom: 55vh;
   right: 42vh;
+  z-index: 5;
   transform: scaleY(1.2);
   transform-origin: 50% 100%;
 }
@@ -113,11 +115,21 @@ body {
 }
 
 .trunk {
-  position: relative;
-  right: 6px;
   width: 25px;
   height: 100px;
+  position: relative;
+  right: 6px;
   background-color: var(--trunk);
+}
+
+.trunk:after {
+  content: '';
+  width: 6px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: var(--trunk-shade);
 }
 
 .shrub {
@@ -127,9 +139,28 @@ body {
   border-right: 80px inset transparent;
 }
 
+.shrub:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: -25px;
+  border-bottom: 50px solid var(--shrub-shade);
+  border-left: 10px inset transparent;
+  border-right: 10px inset transparent;
+  transform: skewX(30deg);
+}
+
 .shrub-one {
   top: -28px;
   right: -62px;
+}
+
+.shrub-one:after {
+  right: -41px;
+  border-bottom-width: 60px;
+  border-left-width: 28px;
+  border-right-width: 0px;
+  transform: skewX(52deg);
 }
 
 .shrub-two {
@@ -137,6 +168,13 @@ body {
   right: -42px;
   border-left-width: 60px;
   border-right-width: 60px;
+}
+
+.shrub-two:after {
+  right: -35px;
+  border-bottom-width: 60px;
+  border-left-width: 16px;
+  transform: skewX(40deg);
 }
 
 .shrub-three {
@@ -159,13 +197,13 @@ body {
 
 .water:after {
   content: '';
+  width: 55px;
+  height: 28px;
   position: absolute;
-  bottom: -38px;
+  bottom: -18px;
   right: 137px;
-  width: 97px;
-  height: 52px;
   border-radius: 50% 0;
-  transform: skew(-56deg);
+  transform: skew(-79deg);
   background-color: var(--water);
 }
 
@@ -174,6 +212,7 @@ body {
   width: 660px;
   height: 520px;
   position: relative;
+  z-index: 50;
   cursor: pointer;
 }
 
